--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9,16 +9,16 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: rgb(177, 225, 255);
+    background-color: rgb(11, 155, 245);
 }
 
 button {
     height: 40px;
     width: 40px;
     border-radius: 50%;
-    border: 2px solid lightcoral;
-    background-color: rgb(241, 214, 214);
-    color: lightcoral;
+    border: 2px solid lightsteelblue;
+    background-color: rgb(32, 22, 22);
+    color: lightsteelblue;
     font-size: 16pt;
     font-weight: 600;
     text-align: center;
